feat:add useAnimate hook

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pickandanimate",
+  "homepage": "https://da1v1d.github.io/pickandanimate/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
